kubernetes/regscale-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: regscale
  name: deployment-regscale
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-regscale 
  replicas: 1 #For the first deployment, set to 1. For future deployments, set to your desired number of replicas, minimum of 3 is recommended to ensure high availability
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-regscale
    spec:
      containers:
      - name: app-regscale
        image: regscale/regscale:latest  #recommended to change latest to a specific RegScale version
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/regscale/files"
            name: files-regscale
      volumes:
      - name: files-regscale
        persistentVolumeClaim:
          claimName: files-regscale
---
apiVersion: v1
kind: Service
metadata:
  namespace: regscale
  name: service-regscale
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-regscale
